[project]
name = "spark_py"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sunwoo", email = "summerham22@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
re_par = 'spark_py.re_partition:re_partition'

[tool.pdm]
distribution = true
